{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 297,
  "lineage": "eadd367d-cd40-e21b-f0ee-69cf882b9ad8",
  "resources": [
    {
      "module": "module.dev-msg-module",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dev_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/networkSecurityGroups/dev-rg-nsg",
            "location": "eastus",
            "name": "dev-rg-nsg",
            "resource_group_name": "dev-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_resource_grp.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.dev_VN",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "10.0.0.4"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "80bdece9-670e-4414-a79d-3fa7406fd969",
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet",
            "location": "eastus",
            "name": "dev-vnet",
            "resource_group_name": "dev-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/21",
                "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet-1",
                "name": "dev-private-subnet-1"
              },
              {
                "address_prefix": "10.0.16.0/21",
                "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet-3",
                "name": "dev-private-subnet-3"
              },
              {
                "address_prefix": "10.0.24.0/21",
                "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet-4",
                "name": "dev-private-subnet-4"
              },
              {
                "address_prefix": "10.0.32.0/24",
                "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-public-subnet1",
                "name": "dev-public-subnet1"
              },
              {
                "address_prefix": "10.0.33.0/24",
                "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-public-subnet2",
                "name": "dev-public-subnet2"
              },
              {
                "address_prefix": "10.0.34.0/24",
                "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/frontend",
                "name": "frontend"
              },
              {
                "address_prefix": "10.0.8.0/21",
                "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet-2",
                "name": "dev-private-subnet-2"
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.dev_resource_grp.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.dev_app_gtw",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "dev_apgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev_test_appgw/backendAddressPools/dev-vnet-beap",
                "ip_addresses": [
                  "20.237.45.5"
                ],
                "name": "dev-vnet-beap"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev_test_appgw/backendHttpSettingsCollection/dev-vnet-be-htst",
                "name": "dev-vnet-be-htst",
                "path": "/",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev_test_appgw/frontendIPConfigurations/dev-vnet-feip",
                "name": "dev-vnet-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/publicIPAddresses/dev_apgw_pubip_name",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev_test_appgw/frontendPorts/dev-vnet-feport",
                "name": "dev-vnet-feport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev_test_appgw/gatewayIPConfigurations/dev_appgw_confname",
                "name": "dev_appgw_confname",
                "subnet_id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/frontend"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev_test_appgw/frontendIPConfigurations/dev-vnet-feip",
                "frontend_ip_configuration_name": "dev-vnet-feip",
                "frontend_port_id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev_test_appgw/frontendPorts/dev-vnet-feport",
                "frontend_port_name": "dev-vnet-feport",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev_test_appgw/httpListeners/dev-vnet-httplstn",
                "name": "dev-vnet-httplstn",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev_test_appgw",
            "identity": [],
            "location": "eastus",
            "name": "dev_test_appgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev_test_appgw/backendAddressPools/dev-vnet-beap",
                "backend_address_pool_name": "dev-vnet-beap",
                "backend_http_settings_id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev_test_appgw/backendHttpSettingsCollection/dev-vnet-be-htst",
                "backend_http_settings_name": "dev-vnet-be-htst",
                "http_listener_id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev_test_appgw/httpListeners/dev-vnet-httplstn",
                "http_listener_name": "dev-vnet-httplstn",
                "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev_test_appgw/requestRoutingRules/dev-vnet-rqrt",
                "name": "dev-vnet-rqrt",
                "priority": 0,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "dev-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_Small",
                "tier": "Standard"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.container_inst.azurerm_container_group.container_image",
            "module.dev_VN.azurerm_virtual_network.vnet",
            "module.dev_app_gtw.azurerm_public_ip.app_gtw_pub_ip",
            "module.dev_app_gtw.azurerm_subnet.frontend",
            "module.dev_resource_grp.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.dev_app_gtw",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "app_gtw_pub_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "fqdn": "23d58152-6283-4748-87f6-dc1923541b7b.cloudapp.net",
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/publicIPAddresses/dev_apgw_pubip_name",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.119.59.90",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev_apgw_pubip_name",
            "resource_group_name": "dev-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.dev_VN.azurerm_virtual_network.vnet",
            "module.dev_resource_grp.azurerm_resource_group.rg",
            "module.container_inst.azurerm_container_group.container_image"
          ]
        }
      ]
    },
    {
      "module": "module.dev_app_gtw",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.34.0/24",
            "address_prefixes": [
              "10.0.34.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/frontend",
            "name": "frontend",
            "resource_group_name": "dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.container_inst.azurerm_container_group.container_image",
            "module.dev_VN.azurerm_virtual_network.vnet",
            "module.dev_resource_grp.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "dev_nat-gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/natGateways/dev-nat-gtw1",
            "idle_timeout_in_minutes": 10,
            "location": "eastus",
            "name": "dev-nat-gtw1",
            "public_ip_address_ids": [
              "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/publicIPAddresses/dev-nat-public-ip"
            ],
            "public_ip_prefix_ids": [
              "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/publicIPPrefixes/dev-nat-public-ip-prefix"
            ],
            "resource_group_name": "dev-rg",
            "resource_guid": "308599aa-f2a2-4e63-984c-ddf969e5f0d0",
            "sku_name": "Standard"
          },
          "dependencies": [
            "module.nat_gateway.azurerm_public_ip.nat_pub_ip",
            "module.nat_gateway.azurerm_public_ip_prefix.nat_pub_ip_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nat_pub_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/publicIPAddresses/dev-nat-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.81.123.228",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-nat-public-ip",
            "resource_group_name": "dev-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.private_subnet[0]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/21",
            "address_prefixes": [
              "10.0.0.0/21"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet-1",
            "name": "dev-private-subnet-1",
            "resource_group_name": "dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.dev_VN.azurerm_virtual_network.vnet",
            "module.dev_resource_grp.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.8.0/21",
            "address_prefixes": [
              "10.0.8.0/21"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet-2",
            "name": "dev-private-subnet-2",
            "resource_group_name": "dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.dev_VN.azurerm_virtual_network.vnet",
            "module.dev_resource_grp.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.16.0/21",
            "address_prefixes": [
              "10.0.16.0/21"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet-3",
            "name": "dev-private-subnet-3",
            "resource_group_name": "dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.dev_VN.azurerm_virtual_network.vnet",
            "module.dev_resource_grp.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.24.0/21",
            "address_prefixes": [
              "10.0.24.0/21"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet-4",
            "name": "dev-private-subnet-4",
            "resource_group_name": "dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.dev_VN.azurerm_virtual_network.vnet",
            "module.dev_resource_grp.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet[1]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/21",
            "address_prefixes": [
              "10.0.0.0/21"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet-1",
            "name": "dev-private-subnet-1",
            "resource_group_name": "dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.dev_VN.azurerm_virtual_network.vnet",
            "module.dev_resource_grp.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.8.0/21",
            "address_prefixes": [
              "10.0.8.0/21"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet-2",
            "name": "dev-private-subnet-2",
            "resource_group_name": "dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.dev_resource_grp.azurerm_resource_group.rg",
            "module.dev_VN.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.16.0/21",
            "address_prefixes": [
              "10.0.16.0/21"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet-3",
            "name": "dev-private-subnet-3",
            "resource_group_name": "dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.dev_VN.azurerm_virtual_network.vnet",
            "module.dev_resource_grp.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.24.0/21",
            "address_prefixes": [
              "10.0.24.0/21"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet-4",
            "name": "dev-private-subnet-4",
            "resource_group_name": "dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.dev_VN.azurerm_virtual_network.vnet",
            "module.dev_resource_grp.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet[0]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.32.0/24",
            "address_prefixes": [
              "10.0.32.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-public-subnet1",
            "name": "dev-public-subnet1",
            "resource_group_name": "dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.dev_VN.azurerm_virtual_network.vnet",
            "module.dev_resource_grp.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.33.0/24",
            "address_prefixes": [
              "10.0.33.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-public-subnet2",
            "name": "dev-public-subnet2",
            "resource_group_name": "dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.dev_resource_grp.azurerm_resource_group.rg",
            "module.dev_VN.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet[1]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.32.0/24",
            "address_prefixes": [
              "10.0.32.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-public-subnet1",
            "name": "dev-public-subnet1",
            "resource_group_name": "dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.dev_VN.azurerm_virtual_network.vnet",
            "module.dev_resource_grp.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.33.0/24",
            "address_prefixes": [
              "10.0.33.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3d19862c-2f28-4014-bd18-68c4fdb584fc/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-public-subnet2",
            "name": "dev-public-subnet2",
            "resource_group_name": "dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.dev_VN.azurerm_virtual_network.vnet",
            "module.dev_resource_grp.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}